--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "less-middleware": "~2.2.1",
     "mongoose": "^5.3.16",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.8"
